--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "static-job-listings-react",
   "private": true,
+  "homepage": "static-job-listings-react/",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
